@@ -1,5 +1,9 @@
 2003-09-15  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* popup.c
+
+	Make empty submenus insensitive
+
 	* cong-menus.c, cong-plugin.c, cong-plugin.h, plugin-cleanup-source.c, plugin-docbook.c, plugin-save-dispspec.c, plugin-validate.c, plugin-website.c, popup.c
 
 	Split CongTool into CongDocTool and CongNodeTool
